--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>mutistep checkout</title>
-        
+        <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     </head>
     <body>
         <div id="App"></div>
-        <script src='./app.js'></script>
+        <script type="application/javascript" src='app.js'></script>
     </body>
 </html>
